# frostgate-sdk

./: Cargo.toml  README.md
src/: chainadapter.rs  frostmessage.rs  lib.rs  traits.rs  types.rs  verification.rs  zkplug.rs
src/frostmessages/: mod.rs
src/traits/: mod.rs
src/types/: mod.rs
src/verification/: mod.rs
