[package]
name = "frostgate-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
bincode.workspace = true
sha2 = "0.10.9"
tokio.workspace = true
num_cpus = "1.16.0"
frostgate-zkip = { path = "../frostgate-zkip" }
parking_lot.workspace = true
lru.workspace = true
blake2.workspace = true
